internal/xds/translator/testdata/out/xds-ir-sublinear/credential-injection-backend-filter.routes.yaml
- ignorePortInHostMatching: true
  name: envoy-gateway/gateway-1/http
  virtualHosts:
  - domains:
    - '*'
    matcher:
      matcherTree:
        exactMatchMap:
          map:
            /foo:
              action:
                name: route
                typedConfig:
                  '@type': type.googleapis.com/envoy.config.route.v3.Route
                  match:
                    pathSeparatedPrefix: /foo
                  metadata:
                    filterMetadata:
                      envoy-gateway:
                        resources:
                        - kind: HTTPRoute
                          name: httproute-1
                          namespace: default
                  name: httproute/default/httproute-1/rule/1/match/0/*
                  route:
                    clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
                    upgradeConfigs:
                    - upgradeType: websocket
                    weightedClusters:
                      clusters:
                      - name: httproute/default/httproute-1/rule/1/backend/0
                        weight: 2
                      - name: httproute/default/httproute-1/rule/1/backend/1
                        requestHeadersToAdd:
                        - appendAction: OVERWRITE_IF_EXISTS_OR_ADD
                          header:
                            key: add-header-3
                            value: some-value
                        weight: 1
        input:
          name: request-headers
          typedConfig:
            '@type': type.googleapis.com/envoy.type.matcher.v3.HttpRequestHeaderMatchInput
            headerName: :path
      onNoMatch:
        matcher:
          matcherTree:
            input:
              name: request-headers
              typedConfig:
                '@type': type.googleapis.com/envoy.type.matcher.v3.HttpRequestHeaderMatchInput
                headerName: :path
            prefixMatchMap:
              map:
                /foo/:
                  action:
                    name: route
                    typedConfig:
                      '@type': type.googleapis.com/envoy.config.route.v3.Route
                      match:
                        pathSeparatedPrefix: /foo
                      metadata:
                        filterMetadata:
                          envoy-gateway:
                            resources:
                            - kind: HTTPRoute
                              name: httproute-1
                              namespace: default
                      name: httproute/default/httproute-1/rule/1/match/0/*
                      route:
                        clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
                        upgradeConfigs:
                        - upgradeType: websocket
                        weightedClusters:
                          clusters:
                          - name: httproute/default/httproute-1/rule/1/backend/0
                            weight: 2
                          - name: httproute/default/httproute-1/rule/1/backend/1
                            requestHeadersToAdd:
                            - appendAction: OVERWRITE_IF_EXISTS_OR_ADD
                              header:
                                key: add-header-3
                                value: some-value
                            weight: 1
    metadata:
      filterMetadata:
        envoy-gateway:
          resources:
          - kind: Gateway
            name: gateway-1
            namespace: envoy-gateway
            sectionName: http
    name: envoy-gateway/gateway-1/http/*
